--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,12 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "socket.io": "^4.5.2"
+    "socket.io-client": "^4.5.2"
   }
 }
