--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/admin-ui": "^0.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "socket.io": "^4.5.2",
